--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@firebase/auth": "^0.19.12",
     "firebase": "^9.6.11",
     "rxjs": "~7.5.0",
+    "sweetalert2": "^11.4.10",
     "tslib": "^2.3.0",
     "zone.js": "~0.11.4"
   },
