--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "@angular/platform-browser-dynamic": "~13.2.0",
     "@angular/router": "~13.2.0",
     "@firebase/auth": "^0.19.12",
+    "@swimlane/ngx-charts": "^17.0.1",
     "firebase": "^9.6.11",
     "rxjs": "~7.5.0",
     "sweetalert2": "^11.4.10",
