--- a/firebase.json
+++ b/firebase.json
@@ -31,5 +31,19 @@
         "destination": "/index.html"
       }
     ]
+  },
+  "firestore": {
+    "rules": "firestore.rules",
+    "indexes": "firestore.indexes.json"
+  },
+  "emulators": {
+    "firestore": {
+      
+      "port": "8081"
+
+    },
+    "ui": {
+      "enabled": true
+    }
   }
 }
